#ajustando o codigo